--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.1",
     "morgan": "~1.9.0",
+    "multer": "^1.4.1",
     "pug": "2.0.0-beta11",
     "shortid": "^2.2.14"
   },
