--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
     "pug": "2.0.0-beta11",
+    "sharp": "^0.22.1",
     "shortid": "^2.2.14"
   },
   "devDependencies": {
